# cpp-linker-helper

./: CMakeLists.txt  CSPlugin.cpp  LICENSE  README.md  test.cpp
cmake/: FindLibClang.cmake
